<hr> should be slate-colored, not text, in dark mode, Fix #351

--- a/app/assets/stylesheets/_dark.scss
+++ b/app/assets/stylesheets/_dark.scss
@@ -52,6 +52,10 @@ html[data-dark='true'] {
     border-bottom-color: $darkless;
   }
 
+  hr {
+      border-color: map-get($palette, slate);
+  }
+
   .menu__content,
   .menu__content > a,
   .menu__action {
